--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,9 @@
   display: flex;
   flex-direction: row;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
